--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
           </div>
        <!-- FOOTER -->
    <footer>
-     <section class="container space-between">
+     <section class="lists container space-between">
        <div>
-         <div class="text-primary">Customer Support</div>
+         <div class="link-header text-primary">Customer Support</div>
          <ul>
            <li><a href="#">Contact Us</a></li>
            <li><a href="#">Order Tracker</a></li>
@@ -130,7 +130,7 @@
          </ul>
        </div>
        <div>
-         <div class="text-primary">Company Info</div>
+         <div class="link-header text-primary">Company Info</div>
          <ul>
            <li><a href="#">About Us</a></li>
            <li><a href="#">Careers</a></li>
@@ -142,7 +142,7 @@
          </ul>
        </div>
        <div>
-         <div class="text-primary">Privacy &amp; Terms</div>
+         <div class="link-header text-primary">Privacy &amp; Terms</div>
          <ul>
            <li><a href="#">Privacy &amp; Security</a></li>
            <li><a href="#">Statement</a></li>
@@ -150,16 +150,16 @@
          </ul>
        </div>
        <div>
-         <div class="text-primary">Follow Us</div>
+         <div class="link-header text-primary">Follow Us</div>
          <ul>
-           <li><a href="#"></a></li>
-           <li><a href="#"></a></li>
-           <li><a href="#"></a></li>
-           <li><a href="#"></a></li>
+             <li><a href="#" class="twitter"></a></li>
+             <li><a href="#" class="facebook"></a></li>
+             <li><a href="#" class="instagram"></a></li>
+             <li><a href="#" class="pinterest"></a></li>
          </ul>
-         <div>
-           <div>Email Updates</div>
-           <div>Exclusive sales, special offers, and more.</div>
+         <div class="newsletter">
+           <div class="link-header">Email Updates</div>
+           <div class ="link-subheader">Exclusive sales, special offers, and more.</divclass>
            <input class="form-control" type="text" placeholder="Enter email address" />
            <button class="btn btn-primary">Sign up</button>
          </div>
