--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
          <div class="demo">This site is created for demonstrative purposes only and does not offer any real products or services.</div>
        </div>
      </section>
-            <div class="text-primary">&copy;Pluralsight 2018</div>
+            <div class="copyright text-primary">&copy;Pluralsight 2018</div>
    </footer>
  </body>
  </html>
